uncontrolled-ns-1-no-kyverno.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kyverno: disabled
  name: uncontrolled-ns-1
