add-sidecar-injection-namespace-kyverno-with-exceptions.yaml
# from https://kyverno.io/policies/istio/add-sidecar-injection-namespace/add-sidecar-injection-namespace/
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-sidecar-injection-namespace
  annotations:
    policies.kyverno.io/title: Add Istio Sidecar Injection
    policies.kyverno.io/category: Istio
    policies.kyverno.io/severity: medium
    kyverno.io/kyverno-version: 1.8.0
    policies.kyverno.io/minversion: 1.6.0
    kyverno.io/kubernetes-version: "1.24"
    policies.kyverno.io/subject: Namespace
    policies.kyverno.io/description: >-
      In order for Istio to inject sidecars to workloads deployed into Namespaces, the label
      `istio-injection` must be set to `enabled`. As an alternative to rejecting Namespace definitions
      which dont already contain this label, it can be added automatically. This policy adds the label
      `istio-inject` set to `enabled` for all new Namespaces.
spec:
  rules:
  - name: add-istio-injection-enabled
    match:
      any:
      - resources:
          kinds:
          - Namespace
# If namespace has label kyverno: disabled, then dont add anything here
    exclude:
      any:
      - resources:
          kinds:
          - Namespace
          selector:
            matchLabels:
              kyverno: disabled

    mutate:
      patchStrategicMerge:
        metadata:
          labels:
            istio-injection: enabled
